tools/fleet/fixtures/packets/invalid/missing-provisioning-state.case
source=valid-work.packet
mutation=remove Provisioning-State
expected=invalid
